hphp/hack/test/typecheck/reserved_name6.php.exp
File "reserved_name6.php", line 5, characters 7-9:
Int cannot be used as it is reserved. (Naming[2068])
