hphp/hack/test/typecheck/reserved_name6.php
<?hh

namespace Foo;

class Int {}
